# dotfiles-lazyvim

./: .gitignore  init.lua  ipython_config.py  lazy-lock.json  pyproject.toml
lua/config/: autocmds.lua  keymaps.lua  lazy.lua  options.lua
lua/plugins/: alpha.lua  bufferline.lua  clipboard_image.lua  cmp_kitty.lua  code_runner.lua  cutlass.lua  dadbod.lua  diffview.lua  disabled_flit.lua  disabled_leap.lua  disabled_navic.lua  edgy.lua  git_advanced_search.lua  iron_nvim.lua  lua_snip.lua  lualine.lua  marks.lua  moonfly.lua  nabla.lua  neo_tree.lua  neoclip.lua  neogen.lua  neorg.lua  neotest.lua  nightfly.lua  noice.lua  null_ls.lua  nvim_cmp.lua  nvim_dap.lua  nvim_lspconfig.lua  nvim_navbuddy.lua  nvim_notify.lua  nvim_runner.lua  octo.lua  personal.lua  pretty_fold.lua  sidebar.lua  sniprun.lua  symbols_outline.lua  theme.lua  (+6 more)
